// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectGroup should render \`Disabled\` state 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--disabled"
      for="disabled-field"
    >
      Disabled
    </label>
    <div
      class="cds-form__input-group"
    >
      <div
        class="cds-form__field cds-form--disabled cds-form--medium"
      >
        <select
          class="cds-form__input"
          disabled=""
          id="disabled-field"
        >
          <option
            value="option_1"
          >
            Option 1
          </option>
          <option
            value="option_2"
          >
            Option 2
          </option>
          <option
            value="option_3"
          >
            Option 3
          </option>
          <option
            value="option_4"
          >
            Option 4
          </option>
          <option
            value="option_5"
          >
            Option 5
          </option>
        </select>
        <span
          class="cds-form__icon cds-form__icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
      <div
        class="cds-form__input-group__adornment cds-form--undefined"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectGroup should render \`Error\` state 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--error"
      for="error-field"
    >
      Error
    </label>
    <div
      class="cds-form__input-group"
    >
      <div
        class="cds-form__field cds-form--error cds-form--medium"
      >
        <select
          class="cds-form__input"
          id="error-field"
        >
          <option
            value="option_1"
          >
            Option 1
          </option>
          <option
            value="option_2"
          >
            Option 2
          </option>
          <option
            value="option_3"
          >
            Option 3
          </option>
          <option
            value="option_4"
          >
            Option 4
          </option>
          <option
            value="option_5"
          >
            Option 5
          </option>
        </select>
        <span
          class="cds-form__icon"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 256 256"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
            />
          </svg>
        </span>
        <span
          class="cds-form__icon cds-form__icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
      <div
        class="cds-form__input-group__adornment cds-form--undefined"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectGroup should render \`Small\` size 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--undefined"
      for="small-field"
    >
      Small
    </label>
    <div
      class="cds-form__input-group"
    >
      <div
        class="cds-form__field cds-form--undefined cds-form--small"
      >
        <select
          class="cds-form__input"
          id="small-field"
        >
          <option
            value="option_1"
          >
            Option 1
          </option>
          <option
            value="option_2"
          >
            Option 2
          </option>
          <option
            value="option_3"
          >
            Option 3
          </option>
          <option
            value="option_4"
          >
            Option 4
          </option>
          <option
            value="option_5"
          >
            Option 5
          </option>
        </select>
        <span
          class="cds-form__icon cds-form__icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
      <div
        class="cds-form__input-group__adornment cds-form--small"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectGroup should render \`Success\` state with \`Large\` size 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--success"
      for="success-field"
    >
      Success
    </label>
    <div
      class="cds-form__input-group"
    >
      <div
        class="cds-form__field cds-form--success cds-form--medium"
      >
        <select
          class="cds-form__input"
          id="success-field"
        >
          <option
            value="option_1"
          >
            Option 1
          </option>
          <option
            value="option_2"
          >
            Option 2
          </option>
          <option
            value="option_3"
          >
            Option 3
          </option>
          <option
            value="option_4"
          >
            Option 4
          </option>
          <option
            value="option_5"
          >
            Option 5
          </option>
        </select>
        <span
          class="cds-form__icon"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 256 256"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
        <span
          class="cds-form__icon cds-form__icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
      <div
        class="cds-form__input-group__adornment cds-form--undefined"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectGroup should render left aligned adornment with text 1`] = `
<div>
  <div
    class="cds-form__field-row"
  >
    <label
      class="cds-form__label cds-form--undefined"
      for="adorned-field"
    >
      Adorned
    </label>
    <div
      class="cds-form__input-group"
    >
      <div
        class="cds-form__input-group__adornment cds-form--undefined"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
        <span>
          Text
        </span>
      </div>
      <div
        class="cds-form__field cds-form--undefined cds-form--medium"
      >
        <select
          class="cds-form__input"
          id="adorned-field"
        >
          <option
            value="option_1"
          >
            Option 1
          </option>
          <option
            value="option_2"
          >
            Option 2
          </option>
          <option
            value="option_3"
          >
            Option 3
          </option>
          <option
            value="option_4"
          >
            Option 4
          </option>
          <option
            value="option_5"
          >
            Option 5
          </option>
        </select>
        <span
          class="cds-form__icon cds-form__icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
